[tool.poetry]
name = "sfed"
version = "0.1.0"
description = "Simple CLI app to generate hashes and encode / decode strings and fiels and create unique identifiers"
authors = ["rrluthi <rrluthi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cement = "^3.0.8"
shortuuid = "^1.0.11"
nanoid = "^2.0.0"
setuptools = "^68.2.2"
pytest = "^7.4.3"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
